# Pizza-crash

./: CMakeLists.txt  cookie.cpp  cookie.h  database.cpp  database.h  http_server.cpp  http_server.h  main.cpp  pizza.cpp  pizza.h  user.cpp  user.h
assets/: fullchain.pem  privkey.pem  server.key  server_certificate.crt
files/: home.html
files/css/: StylesPizza.css  laba_4.css
files/html/: 401.html  About.html  History.html  Home.html  Login.html  MainMenu.html  Order.html  Profile.html  Register.html  home_old.html  laba_4.html  laba_4_2.html  laba_5.html  laba_5_si.html  laba_5_su.html
files/scripts/: History.js  Home.js  MainMenu.js  Order.js  Profile.js
